--- a/main.html
+++ b/main.html
@@ -4,10 +4,37 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	  <style>
+        body {
+            font-family: Arial, sans-serif; /* Font style */
+            background-color: #f4f4f4; /* Background color */
+            margin: 0; /* Remove default margin */
+            padding: 20px; /* Add padding */
+        }
+        h2 {
+            color: #333; /* Subheading color */
+            text-align: center; /* Center align */
+        }
+        table {
+            width: 100%; /* Full width */
+            border-collapse: collapse; /* Collapse borders */
+            margin-top: 20px; /* Margin on top */
+        }
+        th, td {
+            padding: 10px; /* Padding in cells */
+            border: 1px solid #ddd; /* Border for cells */
+        }
+        th {
+            background-color: #f2f2f2; /* Header background color */
+        }
+        tr:hover {
+            background-color: #e2e2e2; /* Row hover effect */
+        }
+    </style>
 </head>
 
 <body>
-	<table border="1">
+	<table>
 		<thead>
 			<tr>
 				<th>Structure</th>
